clusters/home/tailscale/ingress-headlamp.yaml
# https://headlamp.<tailnet>.ts.net  ->  headlamp/headlamp:80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ts
  namespace: headlamp
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: headlamp
      port:
        number: 80
  tls:
    - hosts:
        - headlamp
