clusters/home/tailscale/ingress-speedtest.yaml
# https://speedtest.<tailnet>.ts.net  ->  speedtest/speedtest:80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-ts
  namespace: speedtest
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: speedtest
      port:
        number: 80
  tls:
    - hosts:
        - speedtest
